Fase inicial corregida

--- a/index.html
+++ b/index.html
@@ -11,7 +11,53 @@
 			href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@700&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v6.1.1/css/all.css"
+			integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5"
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" href="assets\css\style.css" />
 	</head>
-	<body></body>
+	<body>
+		<div class="main-cont">
+			<div id="chat">
+				<div id="maria-profile">
+					<img id="maria-pic" src="assets\img\maria.jpg" alt="" />
+				</div>
+				<div class="btn">
+					<button type="button">Nuevo Chat</button>
+				</div>
+				<div class="chat-contact">
+					<img src="assets\img\foto2.jpg" alt="" />
+				</div>
+				<div class="chat-contact">
+					<img src="assets\img\foto3.jpg" alt="" />
+				</div>
+				<div class="chat-contact">
+					<img src="assets\img\foto4.jpg" alt="" />
+				</div>
+				<div class="chat-contact">
+					<img src="assets\img\foto5.jpg" alt="" />
+				</div>
+				<div class="chat-contact">
+					<img src="assets\img\foto6.jpg" alt="" />
+				</div>
+				<div class="chat-contact">
+					<img src="assets\img\foto7.jpg" alt="" />
+				</div>
+				<div class="chat-contact">
+					<img src="assets\img\foto8.jpg" alt="" />
+				</div>
+				<div class="chat-contact">
+					<img src="assets\img\foto9.jpg" alt="" />
+				</div>
+			</div>
+			<div id="fondo">
+				<div>
+					<img src="assets\img\hand.png" alt="" />
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
