--- a/index.html
+++ b/index.html
@@ -24,33 +24,73 @@
 			<div id="chat">
 				<div id="maria-profile">
 					<img id="maria-pic" src="assets\img\maria.jpg" alt="" />
+					<div class="maria-profile-text">
+						<h3>Maria</h3>
+						<p>Activa ahora</p>
+					</div>
+					<div class="logos">
+						<i class="fa-regular fa-message fa-xl"></i>
+						<i class="fa-solid fa-bars fa-xl"></i>
+					</div>
 				</div>
 				<div class="btn">
 					<button type="button">Nuevo Chat</button>
 				</div>
 				<div class="chat-contact">
 					<img src="assets\img\foto2.jpg" alt="" />
+					<div class="chat-contact-text">
+						<h3>Juanita</h3>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
 				</div>
 				<div class="chat-contact">
 					<img src="assets\img\foto3.jpg" alt="" />
+					<div class="chat-contact-text">
+						<h3>Alberto</h3>
+						<p>Lorem, ipsum.</p>
+					</div>
 				</div>
 				<div class="chat-contact">
 					<img src="assets\img\foto4.jpg" alt="" />
+					<div class="chat-contact-text">
+						<h3>Ignacio</h3>
+						<p>Lorem, ipsum dolor.</p>
+					</div>
 				</div>
 				<div class="chat-contact">
 					<img src="assets\img\foto5.jpg" alt="" />
+					<div class="chat-contact-text">
+						<h3>Cristian</h3>
+						<p>Lorem, ipsum dolor.</p>
+					</div>
 				</div>
 				<div class="chat-contact">
 					<img src="assets\img\foto6.jpg" alt="" />
+					<div class="chat-contact-text">
+						<h3>María José</h3>
+						<p>Lorem ipsum dolor sit.</p>
+					</div>
 				</div>
 				<div class="chat-contact">
 					<img src="assets\img\foto7.jpg" alt="" />
+					<div class="chat-contact-text">
+						<h3>Gonzalo</h3>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
 				</div>
 				<div class="chat-contact">
 					<img src="assets\img\foto8.jpg" alt="" />
+					<div class="chat-contact-text">
+						<h3>Juan Pablo</h3>
+						<p>Lorem, ipsum.</p>
+					</div>
 				</div>
 				<div class="chat-contact">
 					<img src="assets\img\foto9.jpg" alt="" />
+					<div class="chat-contact-text">
+						<h3>Magdalena</h3>
+						<p>Lorem, ipsum dolor.</p>
+					</div>
 				</div>
 			</div>
 			<div id="fondo">
