--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 		<title>Contact Me SPA</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
 		<link
@@ -94,8 +96,15 @@
 				</div>
 			</div>
 			<div id="fondo">
-				<div>
+				<div id="img-manos">
 					<img src="assets\img\hand.png" alt="" />
+				</div>
+				<div class="fondo-texto">
+					<h1>Comienza el Networking</h1>
+					<h4>
+						Presiona el botón <span>"Nuevo Chat" </span>para comenzar a crear
+						nuevas redes de contacto para tu empresa o emprendimiento
+					</h4>
 				</div>
 			</div>
 		</div>
